--- a/nostarch/book.toml
+++ b/nostarch/book.toml
@@ -1,6 +1,6 @@
 [book]
 title = "The Rust Programming Language"
-authors = ["Steve Klabnik", "Carol Nichols", "Contributions from the Rust Community"]
+authors = ["Steve Klabnik", "Carol Nichols", "Chris Krycho", "Contributions from the Rust Community"]
 src = "../src" # needs to be explicit (it is implicit in `/book.toml`).
 
 [output.html]
