infra: share infrastructure for mdbook preprocessors
- Create an `mdbook_trpl` library package which hosts shared concerns
  for the packages, e.g. error and config handling.
- Move `mdbook-trpl-note` and `mdbook-trpl-listing` into the new shared
  package, with binaries at `src/bin/(note|listing)/main.rs` and the
  existing libraries at `src/note/mod.rs` and `src/listing/mod.rs` with
  their associated tests.
- Extract their actual shared pieces into the crate root.
- Update `tools/nostarch.sh` to build all the bins in `mdbook_trpl` at
  one time.

At the moment, this doesn't do a lot except trim down the number of
packages in the repository, but it sets things up nicely to support more
preprocessors (which I am going to add shortly).

--- a/packages/mdbook_trpl/Cargo.toml
+++ b/packages/mdbook_trpl/Cargo.toml
@@ -1,9 +1,19 @@
 [package]
-name = "mdbook-trpl-listing"
+name = "mdbook_trpl"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "mdbook-trpl-note"
+path = "src/bin/note.rs"
+
+[[bin]]
+name = "mdbook-trpl-listing"
+path = "src/bin/listing.rs"
+
+[[bin]]
+name = "mdbook-trpl-figure"
+path = "src/bin/figure.rs"
 
 [dependencies]
 clap = { version = "4", features = ["derive"] }
