infra: use anyhow for error reporting
mdbook already does this, and anyhow has nice error reporting.

--- a/packages/mdbook_trpl/Cargo.toml
+++ b/packages/mdbook_trpl/Cargo.toml
@@ -16,6 +16,7 @@ name = "mdbook-trpl-figure"
 path = "src/bin/figure.rs"
 
 [dependencies]
+anyhow = "1"
 clap = { version = "4", features = ["derive"] }
 html_parser = "0.7.0"
 mdbook = { version = "0.4", default-features = false }     # only need the library
