infra: remove extra leading `>` in nostarch output
Preprocessors using pulldown-cmark-to-cmark do not currently round-trip
correctly, and insert leading spaces and an extra initial `>` for block
quotes, so strip those.

--- a/packages/tools/Cargo.toml
+++ b/packages/tools/Cargo.toml
@@ -36,6 +36,11 @@ path = "src/bin/remove_links.rs"
 name = "remove_markup"
 path = "src/bin/remove_markup.rs"
 
+[[bin]]
+name = "cleanup_blockquotes"
+path = "src/bin/cleanup_blockquotes.rs"
+
+
 [dependencies]
 walkdir = { workspace = true }
 docopt = { workspace = true }
